All models completed, included results for individual models

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -5,6 +5,7 @@
 \newacronym{bht}{BHT}{Bottom Hole Temperature}
 \newacronym{br}{BR}{Basin and Range}
 \newacronym{bnn}{BNN}{Bayesian Neural Network}
+\newacronym{cdf}{CDF}{Cumulative Distribution Function}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
 \newacronym{cp}{CP}{Colorado Plateau}
 \newacronym{cv}{CV}{Cross Validation}
@@ -14,6 +15,7 @@
 \newacronym{egs}{EGS}{Enhanced Geothermal Systems}
 \newacronym{eia}{EIA}{United States Energy Information Administration}
 \newacronym{ebk}{EBK}{Empirical Bayes Kriging}
+\newacronym{enpv}{ENPV}{Expected Value of NPV}
 \newacronym{ep}{E\&P}{Exploration and Production}
 \newacronym{fcn}{FCN}{Fully Connected Network}
 \newacronym{fn}{FN}{False Negative}
