--- a/templates/main.tex
+++ b/templates/main.tex
@@ -28,6 +28,7 @@
 
 %\documentclass[12pt,twoside]{mitthesis}
 \usepackage{lgrind}
+\usepackage{float}
 
 %% for figures
 \usepackage[utf8]{inputenc}
